--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,115 @@
 *{
     box-sizing: border-box;
+    
 }
 
 body{
- background-color: rgb(233, 232, 232);
+ background-color: rgb(247, 247, 247);
  margin: .5em;
-}
-
-main, header, footer{
-    padding: 1em;
+ text-align: center; 
+ font-family: 'Yantramanav', sans-serif;
+ color: rgb(128, 127, 127);
 }
 
 header{
-   
+    display: flex;
+    flex-direction: column;
+    padding: .5em;  
+    margin: auto;
+    margin-bottom: 40px;
+}
+
+header img{
+    width: 80%;
+    align-self: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+nav li{
+  /* display: block; */
+  background-color: white;
+  padding: .8em;
+  margin: 5px;
+  width: auto;
+  text-align: center;
+  font-size: 1em;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+nav li:hover{
+    background-color: rgb(228, 228, 228);
+}
+
+ul{
+    list-style: none; 
+    padding: 0;  
+   }
+
+a{
+    color: rgb(59, 59, 59);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+h1, h2{
+    color: rgb(90, 90, 90);
+}
+h2{    
+    font-size: 18px;;
+}
+
+#introduction{
+    display: flex;
+    flex-direction: column;
+    padding: 2px;
+    margin: auto;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+
+article{
+    align-self: center;
+    width: auto;
+    padding: 2px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+article img{
+  align-self: center;
+  width: 100%;
+}
+
+#portfolio{
+    background-color: rgb(255, 255, 255);
+    padding: .5em;
+    }
+
+.section-heading{
+margin-bottom: 40px;
+font-family: 'Source Sans Pro', sans-serif;
+text-transform: uppercase;
+color: rgb(59, 59, 59);
+}
+
+#contact{
+    padding: .5em;
 }
 
 footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-
-
-
-h2{
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-article{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 2px;
-    text-align: center;
-}
-
-article img{
-    max-width: 100%;
-}
-
-#portfolio{
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    margin: auto;
-}
-
-#contact{
-    background-color: rgb(255, 255, 255);
-    padding: .5em;
-    margin-top: 20px;
+    align-items: center;
+    padding: 5px;
+    border-top: 2px solid rgb(240, 237, 237);
+    font-family: 'Source Sans Pro', sans-serif;
+    color: rgb(49, 49, 49);
+    
 }
