--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 body{
- background-color: rgb(247, 247, 247);
+ background-color: rgb(243, 243, 243);
  margin: .5em;
  text-align: center; 
  font-family: 'Yantramanav', sans-serif;
@@ -22,8 +22,8 @@ header{
 header img{
     width: 80%;
     align-self: center;
-    margin-top: 40px;
-    margin-bottom: 20px;
+    padding: 5px;
+    margin: 40px 0 20px 0;
 }
 
 nav li{
@@ -31,7 +31,7 @@ nav li{
   background-color: white;
   padding: .8em;
   margin: 5px;
-  width: auto;
+  /* width: auto; */
   text-align: center;
   font-size: 1em;
   font-family: 'Source Sans Pro', sans-serif;
@@ -63,18 +63,25 @@ h2{
 #introduction{
     display: flex;
     flex-direction: column;
-    padding: 2px;
-    margin: auto;
-}
+    margin: 20px;
+   }
 
 main{
     display: flex;
     flex-direction: column;
     margin-bottom: 40px;
+    
 }
 
+#portfolio{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    padding: 1.5em;
+    }
+
 article{
-    align-self: center;
+   
     width: auto;
     padding: 2px;
     margin-top: 20px;
@@ -82,14 +89,8 @@ article{
 }
 
 article img{
-  align-self: center;
   width: 100%;
 }
-
-#portfolio{
-    background-color: rgb(255, 255, 255);
-    padding: .5em;
-    }
 
 .section-heading{
 margin-bottom: 40px;
@@ -100,7 +101,11 @@ color: rgb(59, 59, 59);
 
 #contact{
     padding: .5em;
+    margin-top: 40px;
+    max-width: 500px;
+    align-self: center;
 }
+
 
 footer{
     display: flex;
@@ -112,4 +117,53 @@ footer{
     font-family: 'Source Sans Pro', sans-serif;
     color: rgb(49, 49, 49);
     
+}
+
+@media (min-width: 768px){
+
+    #introduction{
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        justify-content: space-between;
+        text-align: start;
+        flex: 1;
+    }
+    header img{
+        margin: 0;
+    }
+}
+
+@media (min-width: 1024px){
+
+    #top-bar{
+        display: flex;
+        justify-content: space-between;
+        margin: 20px;
+        }
+
+    nav ul{
+       display: flex;
+    }
+
+    nav li{
+        background: none;
+    }
+
+    #portfolio-articles{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    article{
+        width: 33%;       
+        
+    }
+
+    footer a{
+        display: none;
+
+    }
+
+   
 }
